keyboards/crkbd/keymaps/aeby/oled_gfx.h

typedef struct { int16_t x, y; } gfx_pt_t;
/* Orbital ring (full circle). Dashed unless solid. local_center overrides the
 * route's shared heliocentric center (arc_cx/arc_cy) — used for moon orbits. */
typedef struct {
    uint8_t radius;
    bool    solid;
    uint8_t gap_px;        /* 0 → use route gap_px */
    bool    local_center;
    int16_t cx, cy;
} gfx_arc_t;
/* A route leg pivots through real placements rather than tweening:
 *  - TRANSFER: quadratic Bézier p0→ctrl→p1, tangent to both orbits.
 *  - COAST:    a true circular-orbit arc segment, center (cx,cy) radius arc_r,
 *              starting at angle a0 and sweeping a_sweep radians (signed). */
typedef enum { GFX_LEG_TRANSFER = 0, GFX_LEG_COAST = 1 } gfx_leg_type_t;
typedef struct {
    uint8_t type;          /* gfx_leg_type_t */
    int16_t p0x, p0y;
    int16_t p1x, p1y;
    int16_t cx, cy;        /* TRANSFER: Bézier control; COAST: arc center */
    uint8_t arc_r;         /* COAST radius (px) */
    float   a0;            /* COAST start angle (rad, display space) */
    float   a_sweep;       /* COAST signed sweep (rad) */
    float   len;           /* leg length (px) — for cumulative ship traversal */
} gfx_leg_t;
/* TARGET appended last so existing values stay stable for the ctypes bridge. */
typedef enum {
    GFX_MARKER_RING, GFX_MARKER_CROSS, GFX_MARKER_BODY, GFX_MARKER_TARGET
} gfx_marker_type_t;
typedef struct { int16_t x, y; gfx_marker_type_t type; } gfx_marker_t;
typedef struct {
    int16_t      arc_cx, arc_cy;    /* shared heliocentric center (the star) */
    uint8_t      arc_count;
    gfx_arc_t    arcs[8];
    uint8_t      dash_px, gap_px;

    uint8_t      leg_count;
    gfx_leg_t    legs[4];

    uint8_t      marker_count;
    gfx_marker_t markers[4];

    uint8_t      body_count;
    gfx_pt_t     bodies[6];

    int8_t       ship_offset_x;     /* nudge so the crosshair leads cleanly */
    uint16_t     eta_minutes;       /* nominal journey duration (telemetry)  */

    char         system_name[12];   /* proper system name, e.g. "CALPAMOS"   */
    char         designation[8];    /* destination, e.g. "LV-426"            */

    /* Space-filling banner: when best-fit framing leaves a wide x-gap on a compact
     * route, a placard (designation + spectral class) fills it. Appended last so
     * the ctypes bridge stays stable (gfx_route_sizeof asserts parity). */
    char         dest_class[4];     /* destination spectral class, e.g. "D4" / "III" */
    uint8_t      banner_x;          /* banner strip left x (0 ⇒ no banner)            */
    uint8_t      banner_w;          /* banner strip width  (0 ⇒ no banner)            */
} gfx_route_t;
void gfx_route_bake_bg(const gfx_route_t *route, uint8_t buf[512]);
void gfx_route_bake_ship(const gfx_route_t *route, float t, uint8_t pulse, uint8_t buf[512]);
/* Evaluate the ship position (x,y, after ship_offset_x) at journey t. */
void gfx_route_ship_pos(const gfx_route_t *route, float t, int16_t *ox, int16_t *oy);
/* Crosshair pulse size from a free-running millisecond clock (~1 Hz triangle). */
uint8_t gfx_pulse_size(uint32_t now_ms);
/* sizeof(gfx_route_t) — lets the host ctypes bridge assert struct-layout parity. */
uint32_t gfx_route_sizeof(void);
typedef enum {
    GFX_PHASE_DEPART  = 0,   /* leaving the departure body (injection burn)   */
    GFX_PHASE_TRANSIT = 1,   /* cruising a transfer leg                       */
    GFX_PHASE_FLYBY   = 2,   /* gravity-assist junction between transfer legs */
    GFX_PHASE_COAST   = 3,   /* riding a Lagrange coast leg                   */
    GFX_PHASE_ARRIVE  = 4,   /* capturing at the destination                  */
} gfx_phase_t;
/* Phase word + burn flag at journey t. Shares the leg-walk gfx_route_ship_pos
 * uses; reads windows from route->eta_minutes. burn_out may be NULL. */
gfx_phase_t gfx_route_phase(const gfx_route_t *route, float t, bool *burn_out);
/* Fill a 512-byte buffer with the full-panel BURN warning: dark-on-light, big
 * bespoke glyphs re-oriented to landscape on the slave's portrait OLED. The
 * buffer is in the slave's OLED_ROTATION_270 logical page format (32 wide × 128
 * tall, stride 32) so oled_write_raw + the driver's render-time rotate land it
 * upright-landscape. now_ms drives the marching hazard stripes. */
void gfx_burn_warning(uint8_t buf[512], uint32_t now_ms);