keyboards/crkbd/keymaps/aeby/starmap_world.h

/* Body kinds. */
enum {
    STARMAP_PLANET  = 0,
    STARMAP_MOON    = 1,
    STARMAP_TROJAN  = 2,
    STARMAP_VAGRANT = 3,
};
/* Lagrange point selector (see header comment for the convention). */
typedef enum {
    STARMAP_L1 = 0,  /* collinear, just inside the planet  */
    STARMAP_L2,      /* collinear, just outside the planet */
    STARMAP_L3,      /* collinear, opposite the planet     */
    STARMAP_L4,      /* +60° leading  on the orbit         */
    STARMAP_L5,      /* -60° trailing on the orbit         */
} starmap_lagrange_t;
typedef struct {
    starmap_body_t bodies[STARMAP_MAX_BODIES];
    uint8_t        body_count;
    uint8_t        planet_idx[STARMAP_MAX_PLANETS]; /* ascending orbital radius */
    uint8_t        planet_count;
    uint8_t        depart_idx;   /* body index the journey departs from */
    uint8_t        dest_idx;     /* body index of the destination */
    char           name[STARMAP_NAME_LEN];      /* proper system name, e.g. "CALPAMOS" */
    char           designation[STARMAP_DESIG_LEN]; /* class-derived, e.g. "LV-426" / "KG-348" */
    uint32_t       seed;
} starmap_system_t;
/* djb2 over the seed token — the deterministic seed. */
uint32_t starmap_seed(const char *designation);
/* Build the full deterministic system for a seed token. The token only seeds the
 * world (djb2 → LCG); the displayed designation is derived from the destination
 * body's class — see starmap_designation. */
void starmap_build(const char *designation, starmap_system_t *out);
/* World position of a body (recursively adds the parent's position). */
void starmap_world_pos(const starmap_system_t *sys, int idx, float *x, float *y);
/* World position of a planet's Lagrange point. planet_body_idx must be a
 * star-orbiting planet (parent_idx == 0xFF). */
void starmap_lagrange_pos(const starmap_system_t *sys, int planet_body_idx,
                          starmap_lagrange_t which, float *x, float *y);